--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   margin: 0;
   padding: 0;
   border: 0;
-  background-color: #E3E3E3; }
+  background-color: #222222; }
 
 .specialContainer {
   width: 940px;
