specials IE ready

--- a/css/master.sass
+++ b/css/master.sass
@@ -2,7 +2,8 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   margin: 0
   padding: 0
   border: 0
-  background-color: #222222
+  background-color: #D7D7D7
+  
 .specialContainer
   width: 940px
   background-color: #ffffff
