--- a/css/master.sass
+++ b/css/master.sass
@@ -3,7 +3,7 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   padding: 0
   border: 0
   background-color: #D7D7D7
-  
+
 .specialContainer
   width: 940px
   background-color: #ffffff
@@ -48,6 +48,9 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   margin: 0
   border: 0
   text-align: right
+  font
+    font-size: 18px
+    background-color: none
 .monthsSections
   background-color: #ffffff
   flex: 1
