--- a/css/master.css
+++ b/css/master.css
@@ -63,7 +63,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   flex: 1;
   font-size: 38px;
   padding: 23px 0 0 0;
-  margin: 0px 0 0 5px;
+  margin: 0px 0 0 10px;
   border: 0;
   line-height: 1; }
 
@@ -122,7 +122,11 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
     padding: 0 0 0 10px;
     margin: 0;
     border: 0;
-    text-align: left; }
+    text-align: left;
+    letter-spacing: -1px; }
+    .lease font {
+      font-size: 14px;
+      background-color: none; }
   .monthsSections {
     flex: 1;
     font-size: 20px;
