--- a/css/master.css
+++ b/css/master.css
@@ -62,8 +62,8 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   background-color: #ffffff;
   flex: 1;
   font-size: 38px;
-  padding: 23px 0 0 0;
-  margin: 0px 0 0 10px;
+  padding: 23px 0 0 10px;
+  margin: 0px 0 0 0px;
   border: 0;
   line-height: 1; }
 
