--- a/css/master.sass
+++ b/css/master.sass
@@ -91,6 +91,12 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   font-size: 25px
   font-weight: 700
 
+#spacer
+  width: 15px
+  height: 10px
+  display: inline
+  background-color: #ffffff
+
 @media (max-width: 600px)
   .specialContainer
     width: 240px
