omg please spacing work please

--- a/css/master.css
+++ b/css/master.css
@@ -106,7 +106,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   font-weight: 700; }
 
 #spacer {
-  width: 15px;
+  width: 15px !important;
   height: 10px;
   display: inline;
   background-color: #ffffff; }
@@ -155,4 +155,6 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
     padding: 10px;
     display: block;
     font-size: 25px;
-    text-align: center; } }
+    text-align: center; }
+  #spacer {
+    display: none; } }
