--- a/css/master.sass
+++ b/css/master.sass
@@ -92,7 +92,7 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   font-weight: 700
 
 #spacer
-  width: 15px
+  width: 15px !important
   height: 10px
   display: inline
   background-color: #ffffff
@@ -142,3 +142,5 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
     display: block
     font-size: 25px
     text-align: center
+  #spacer
+    display: none
