--- a/css/master.sass
+++ b/css/master.sass
@@ -38,8 +38,14 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
 .leaseHead
   background-color: #ffffff
   padding: 35px 0 0 80px
-  margin: 0 0 -5px 0
+  margin: 0 0 0px 0
   z-index: 8999
+font
+  font-size: 8px
+  background-color: none
+  position: relative
+  top: 0px
+  padding: 0 0px 0 0
 .lease
   background-color: #ffffff
   flex: 1
@@ -51,6 +57,10 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   font
     font-size: 18px
     background-color: none
+    position: absolute
+    top: 80px
+    padding: 0 10px 0 0
+
 .monthsSections
   background-color: #ffffff
   flex: 1
@@ -119,6 +129,10 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
     font
       font-size: 14px
       background-color: none
+      vertical-align: top
+      height: 100px
+      top: 0
+
   .monthsSections
     flex: 1
     font-size: 20px
