--- a/css/master.sass
+++ b/css/master.sass
@@ -50,7 +50,7 @@ font
   background-color: #ffffff
   flex: 1
   font-size: 110px
-  padding: 0 0 0 0
+  padding: 0 20px 0 0 !important
   margin: 0
   border: 0
   text-align: right
@@ -65,8 +65,8 @@ font
   background-color: #ffffff
   flex: 1
   font-size: 38px
-  padding: 23px 0 0 10px
-  margin: 0px 0 0 0px
+  padding: 23px 20px 0 10px
+  margin: 0px 20px 0 0px
   border: 0
   line-height: 1
 .moneyDue
