--- a/css/master.css
+++ b/css/master.css
@@ -57,7 +57,7 @@ font {
   background-color: #ffffff;
   flex: 1;
   font-size: 110px;
-  padding: 0 20px 0 0 !important;
+  padding: 0 0px 0 0;
   margin: 0;
   border: 0;
   text-align: right; }
@@ -114,6 +114,9 @@ font {
   background-color: #ffffff;
   font-size: 25px;
   font-weight: 700; }
+
+#SLTPRICE {
+  width: 100px; }
 
 #spacer {
   width: 15px !important;
