--- a/css/master.sass
+++ b/css/master.sass
@@ -50,7 +50,7 @@ font
   background-color: #ffffff
   flex: 1
   font-size: 110px
-  padding: 0 20px 0 0 !important
+  padding: 0 0px 0 0
   margin: 0
   border: 0
   text-align: right
@@ -100,6 +100,8 @@ font
   background-color: #ffffff
   font-size: 25px
   font-weight: 700
+#SLTPRICE
+  width: 100px
 
 #spacer
   width: 15px !important
