--- a/master.css
+++ b/master.css
@@ -41,10 +41,10 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   padding: 1px 0;
   width: 981px;
   height: 19px;
-  animation-name: buttonFrames;
+  /*animation-name: buttonFrames;
   animation-duration: 4s;
   animation-iteration-count: infinite;
-  transition: background-color .2s;
+  transition: background-color .2s;*/
   z-index: 9999;
 }
 .opener:focus {
