changing display on info, testing

--- a/master.css
+++ b/master.css
@@ -66,6 +66,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   cursor: pointer;
 }
 .offerDetails {
+  display: none;
   padding: 70px 0 0 0px;
   width: 820px;
   background-color: inherit;
