--- a/css/master.sass
+++ b/css/master.sass
@@ -2,7 +2,7 @@ html, body, div, h1, h2, h3, h4, h5, h6,p, span
   margin: 0
   padding: 0
   border: 0
-  background-color: #E3E3E3
+  background-color: #red
 
 .specialContainer
   width: 940px
@@ -106,6 +106,7 @@ font
   height: 10px
   display: inline
   background-color: #ffffff
+  padding: 1px
 
 @media (max-width: 600px)
   .specialContainer
