--- a/master.css
+++ b/master.css
@@ -88,7 +88,8 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, span {
   margin: 5px 0;
 }
 .topText {
-  background-image: url(http://pictures.dealer.com/r/ramseycdjcllc/0761/d33c0ce8d221b615497c7fa8a5481708x.jpg);
+  background-image: url(http://pictures.dealer.com/r/ramseycdjcllc/0880/c4de87064dcd2186cd4dcfa4ec73957ex.jpg);
+  background-size: 981px 96px;
   width: 981px;
   height: 96px;
   color: #fff;
@@ -518,7 +519,7 @@ font {
       margin: 5px 0;
     }
     .topText {
-      background-image: url(http://pictures.dealer.com/r/ramseycdjcllc/1314/fc3996c10806e4392084d375ea415b8dx.jpg);
+      background-image: url(http://pictures.dealer.com/r/ramseycdjcllc/1144/033c2cafd9c360b2905449f5deee9202x.jpg);
       width: 281px;
       height: 85px;
       background-size: 280px 85px;
